--- a/build.gradle
+++ b/build.gradle
@@ -1,28 +1,19 @@
 plugins {
 	id 'java'
-	id 'idea'
 }
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
-sourceSets {
-	main {
-		java {
-			srcDir 'src'
-		}
-	}
-}
-
-jar {
-	from sourceSets.main.allSource
-	archiveName = "PSWGCommon.jar"
-}
-
-task wrapper(type: Wrapper) {
-	gradleVersion = "4.4"
+repositories {
+	jcenter()
 }
 
 dependencies {
-	compile project(':PSWGCommon')
+	compile project(':pswgcommon')
+	testCompile 'junit:junit:4.12'
+}
+
+task wrapper(type: Wrapper) {
+	gradleVersion = "4.7"
 }
