--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,21 @@
 plugins {
-	id 'java'
+	id "java"
 	id "org.javamodularity.moduleplugin"
+	id "org.jetbrains.kotlin.jvm"
 }
 
 sourceCompatibility = 12
 
 repositories {
+	mavenLocal()
 	jcenter()
 }
 
 dependencies {
 	compile project(':pswgcommon')
 	compile group: 'me.joshlarson', name: 'jlcommon-network', version: '1.0.0'
+	compile group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version: '1.3.50'
+	compile group: 'org.jetbrains.kotlinx', name: 'kotlinx-coroutines-core', version: '1.3.0'
 	
 	testCompile 'junit:junit:4.12'
 }
